--- a/webcomp-webcams-main/package.json
+++ b/webcomp-webcams-main/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "css-loader": "^6.8.1",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "node-sass": "^9.0.0",
